cmake_minimum_required(VERSION 3.10)
project( output )
find_package( OpenCV REQUIRED )
find_package( OpenMP REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${/usr/include/opencv2/xfeatures2d.hpp} )
include_directories( ${/usr/include/opencv2/xfeatures2d/nonfree.hpp} )
add_executable( output  src/main.cpp )
target_link_libraries( output ${OpenCV_LIBS} )
if(OpenMP_CXX_FOUND)
    target_link_libraries(output OpenMP::OpenMP_CXX)
endif()