cmake_minimum_required(VERSION 3.10)
project( serial_comm )
find_package( OpenCV REQUIRED )
find_package( OpenMP REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( serial_comm  Pi5_UART_Comm.cpp )
target_link_libraries( serial_comm ${OpenCV_LIBS} )
if(OpenMP_CXX_FOUND)
    target_link_libraries(serial_comm OpenMP::OpenMP_CXX)
endif()